--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -23,10 +23,28 @@
         {
             "type": "bashdb",
             "request": "launch",
+            "name": "back-vol.sh VOLUME",
+            "cwd": "${workspaceFolder}",
+            "program": "${workspaceFolder}/back-vol.sh",
+            "args": ["--debug", "--name", "vm1", "-s", "test/ds2", "-d", "/mnt/test/ds1/back", "-c", "--no-remove-tmp", "--dry-run"]
+            //"args": ["--debug", "--name", "vm1", "-s", "test/ds2", "-d", "/mnt/test/ds1/back"]
+        },
+        {
+            "type": "bashdb",
+            "request": "launch",
+            "name": "back-vol.sh JSON",
+            "cwd": "${workspaceFolder}",
+            "program": "${workspaceFolder}/back-vol.sh",
+            //"args": ["--debug", "--name", "vm1", "-s", "test/ds2", "-d", "/mnt/test/ds1/back", "-c", "--no-remove-tmp"]
+            "args": ["--debug", "-s", "test/ds2", "-d", "/mnt/test/ds1/back", "--dry-run", "--config", "cron-vm-deb.json"]
+        },
+        {
+            "type": "bashdb",
+            "request": "launch",
             "name": "1.sh",
             "cwd": "${workspaceFolder}",
             "program": "${workspaceFolder}/1.sh",
-            "args": ["-g", "cron-vm.json", "--debug", "--name", "dev-deb-001"]
+            "args": ["-g", "cron-vm-deb.json", "--name", "vm1", "--dry-run", "-s", "test/ds2", "-d", "/mnt/test/ds1/back" ]
         },
 
     ]
