--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -36,7 +36,7 @@
             "cwd": "${workspaceFolder}",
             "program": "${workspaceFolder}/back-vol.sh",
             //"args": ["--debug", "--name", "vm1", "-s", "test/ds2", "-d", "/mnt/test/ds1/back", "-c", "--no-remove-tmp"]
-            "args": ["--debug", "-s", "test/ds2", "-d", "/mnt/test/ds1/back", "--dry-run", "--config", "cron-vm-deb.json", "-c"]
+            "args": ["--debug", "-s", "test/ds2", "-d", "/mnt/test/ds1", "--dry-run", "--config", "cron-vm-deb.json", "-c"]
         },
         {
             "type": "bashdb",
@@ -44,7 +44,7 @@
             "name": "1.sh",
             "cwd": "${workspaceFolder}",
             "program": "${workspaceFolder}/1.sh",
-            "args": ["-g", "cron-vm-deb.json", "--name", "vm1", "--dry-run", "-s", "test/ds2", "-d", "/mnt/test/ds1/back" ]
+            "args": ["-g", "cron-vm-deb.json", "--name", "vm1", "--dry-run", "-s", "test/ds2", "-d", "/mnt/test/ds1" ]
         },
     ]
 }
